style.css
#wrapper{
    max-width: 960px;
    margin: auto;
}

h1, h2, h3, h4, h5{
    font-family: 'Montserrat', sans-serif;
    color: #737373;
    text-align: center;
    margin:0;
    padding:0;
}

p, li, td, th, ol, form, div, ul{
    font-family: 'Open Sans', sans-serif;
    font-size: 14px;
    color: #737373;
    margin:0;
    padding:0;
}

hr{
    color: #fff;
    border-style:dashed;
}

.material-icons{
    color: #db187d;
    font-size: 14px;
    text-shadow: 1px 1px 2px #e3e3e3;
}

header{
    padding-bottom: 30px;
    border-bottom: 1px dashed #f3c7cf;
}

.header-block{
    position: relative; 
    background: linear-gradient(360deg, rgba(255,5,126,0.5) 0%, rgba(173,0,121,0.5) , rgba(124,0,127,0.5) , rgba(80,0,133,0.5) ), url('images/sakura.jpg');
    height: 350px;
    text-align: center;
    background-size: cover;
}

.header-text-block{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.title-1{
    color: #fff;
    margin-bottom: 0px;
    text-align:center;
    font-weight: 400;
}

.title-1.title-buttom{
    margin-top: 0px;
    color: #fff;
    text-align: center;
}

nav {
    max-width: 800px;
    margin:auto;
    padding-top: 0px;
    position: absolute;
    top:4%;
    right: 3%;
}

.navigation-bar{
    width: 100%;
    list-style-type: none;
    padding: 0px;
    height: 70px;
}

.navigation-bar li {
    text-align: center;
    display: inline-block;
    float: left;
    text-decoration: none;
    font-weight: 600;
    color: #db187d;
    box-sizing: border-box;
}

.navigation-bar li:first-child {
    padding-left:3px;
}

.navigation-bar li:last-child {
    padding-right:0px;
}

.navigation-bar a{
    padding: 0px 10px 10px 10px;
    text-decoration: none; 
    color: #ffffff;
    margin: 0px 5px 5px 5px;
    font-size: 10px;
}

.navigation-bar a.active{
    padding: 5px 24px;
    text-decoration: none; 
    color:white;
    background-color: #db187d;
    border-radius: 50px;
    box-shadow: -1px 2px 14px 1px rgba(0,0,0,0.12);
}

.navigation-bar a:hover:not(.active){
    color: #f3c7cf;
    text-shadow: -1px 2px 14px #737373;
}

i.material-icons.link:hover:not(.active){
    color: #f3c7cf;
    text-shadow: -1px 2px 14px #737373;
}

.material-icons.link{
    color: #fff;
    font-size: 16px;
    text-shadow: none;
    position: relative;
    top: 4px;
    padding-right: 5px;
}


.clearfix{
    clear:both;
}

article{
    max-width: 800px;
    margin:auto;
    height: auto;   
    border-bottom: 1px dashed #f3c7cf;
    padding-bottom: 100px;
}

.background-box{
    background-color: #fff;
    padding: 20px 20px;
    box-shadow: -1px 2px 70px 1px rgba(0,0,0,0.12);
    border-radius: 10px;
}

footer{
    background-color: white;
}

footer p{
    text-align: center;
    font-size: 12px;
    padding: 30px 0px;
    font-weight: 600;
}

.footer-pink{
    font-weight: 600;
    color: #db187d;
}

/* ---- INDEX.HTML ---- */

.background-box.index{
    max-width: 500px;
    margin: 0 auto;
    height: auto;
    padding: 30px;
    border-radius: 10px;
}

.about-block h3{
    margin-top: 70px;
}

.about-block p{
    line-height: 30px;
    text-align: justify;
}

/* ---- ABOUTME.HTML ---- */

.about-block{
    width: 100%;
    margin-top: 90px;
}

.about-block img{
    width: 100%;
    height: auto;
    margin-bottom: 40px;
}

.about-block h2{
    margin-bottom: 70px;
}

.sidebar{
    float: left;
    width: 30%;
    height: auto;
    padding: 0px 7px 0px 20px;
    box-sizing: border-box;
}

.sidebar-photo{
    width: 70%;
}
.sidebar-photo img{
    width: 100%;
    height: auto;
    border-radius: 200px;
    margin-bottom: 30px;
    border: 3px dotted #f3c7cf;
    padding: 20px;
}

.sidebar h3{
    text-align: left;
    padding: 0px 20px 20px 0px;
    margin:0;
}

.sidebar p{
    text-align: left;
    line-height: 25px;
    padding-right: 20px;
    margin:0px;
    font-size: 12px;
}

.sidebar p:nth-child(5){
    margin-bottom: 20px;
}

.main-bar{
    float: left;
    width: 70%;
    height: auto;
    border-left: 1px dashed #f3c7cf;
    box-sizing: border-box;
    padding-right: 20px;
    margin-bottom: 30px;
}

.main-bar p{
    margin-top: 10px;
    text-align: justify;
    line-height: 25px;
    padding-left: 20px;
}

.main-bar h3{
    text-align: left;
    padding: 0px 20px 7px 20px;
    margin:0;
}

/* MOVIES */

table{
    border: 2px dotted #f3c7cf;
    margin: 0 auto;
    border-collapse: collapse;
}

table th, td{
    padding: 20px 20px 20px 20px;
    text-align: left;
    border-bottom: 2px dotted #f3c7cf;
    border-right: 2px dotted #f3c7cf;
}

table th{
    font-size: 16px;
    text-transform: uppercase;
}

table td:nth-child(1){
    padding-right: 40px;
}

table td:nth-child(4){
    padding-right: 80px;
}

table tr:nth-child(even){
    background-color: #ffebf1;
}

table tr:nth-child(odd){
    background-color: #fff;
}


/* LINKS */

.background-box.links{
    width: 300px;
    margin: 0 auto;
    line-height: 40px;
    border-radius: 10px;
}

.link-box{
    border: 2px dotted #f3c7cf;
    padding:0px 10px 10px 10px;
}

.background-box.links ul{
    padding-left:0px;
}

.background-box.links hr{
    color: #f3c7cf;
    border-style:dashed;
    margin:0;
}

.background-box.links li{
    color: #db187d;
    font-size:20px;
    text-decoration: none;
    font-weight: 600;
    list-style-type: none;
    margin: 0px 10px 10px 10px;
    padding-top: 20px;
}

.background-box.links li li{
    font-size:14px;
    color: #737373;
    margin: 0px;
    list-style-type: none;
    padding-top: 0px;
}

.background-box.links li li:nth-child(2n){
     background-color: #ffebf1;
}

.background-box.links li li li:nth-child(2n+1){
     background-color: #fff;
}

.background-box.links li li li {
    font-size:14px;
    color: #c9c9c9;
    padding-left: 25px;
    list-style-type: none;
    border: 0;
     padding-top: 0px;
}

.background-box.links li li a{
    color: #737373;
    text-decoration: none;
}

.background-box.links li li a:hover{
    color: #db187d;
    text-decoration: none;
    font-size:14px;
}

/* CONTACT */

.background-box.contact{
    width: 500px;
    margin: 0 auto;
    line-height: 40px;
}

input, label{
    padding: 0px;
}

input[type=text], input[type=email], select{
    width: 100%;
    padding: 12px 20px;
    margin: 0px 0px 15px 0px;
    display: inline-block;
    border: 2px dotted #f3c7cf;
    border-radius: 4px;
    box-sizing: border-box;
    background-color: #f8f8f8;
    color: #737373;
}

button[type=submit] {
    width: 100%;
    background-color: #db187d;
    color: white;
    padding: 14px 20px;
    margin: 8px 0;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

button[type=submit]:hover {
    background-color: #951557;
}

fieldset{
    border: 2px dotted #f3c7cf;
    padding: 30px;
}

textarea {
    width: 100%;
    height: 150px;
    padding: 12px 20px;
    box-sizing: border-box;
    border: 2px dotted #f3c7cf;
    border-radius: 4px;
    background-color: #f8f8f8;
    font-size: 11px;
    color: #737373;  
    resize: none;
}

option{
    padding: 30px 0px
}

